--- a/style.css
+++ b/style.css
@@ -28,3 +28,12 @@ footer {
     text-align: center;
     font-style: italic;
 }
+
+a{
+    text-decoration: none;
+    color: rgba(255, 255, 255, 0.500);
+}
+
+a:hover {
+    color: rgb(255, 255, 255);
+}
